--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -905,6 +905,11 @@ img {
    color: var(--text-color-light);
 }
 
+.contact__subtitle a {
+   color: inherit;
+   text-decoration: none;
+}
+
 .contact__content{
    background-color: var(--input-color);
    border-radius: .5rem;
